--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,11 @@ nav {
 #navbar li a:hover {
     color: rgb(158, 190, 163);
 }
+
+footer{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: silver;
+}
